2004-10-31  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.ccg: SignalProxy_Modify::gtk_callback():
	Do not return before actually copying the value.
	* examples/book/treeview/: Added filter_modify example, to show the 
	use of set_modify_func().

2004-10-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.[hg|ccg]: Added implementations of 
	set_value_impl() to ouput a warning when it is used instead of 
	the child model.
	* gtk/src/treeview.[hg|ccg]: Added _get_base_model() non-public API 
	member method to get the child model, if necessary. Used it in the 
	cell renderer signal handlers instead of get_model(). This fixes 
	the crash in examples/book/treeview/filter/

2004-10-29  Murray Cumming  <murrayc@murrayc.com>

	* exmaples/src/treeview/example_window.h: Add the new model column to 
	the model record.
	* examples/src/treeview/example_window.cc: The visible_func seems to 
	get an iterator to the child model, not the filter model, so do not 
	convert.

2004-10-28  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.[hg|ccg]: Constructor: Pass a 0 to GTK+ if 
	for an empty TreeModel::Path, because GTK+ complains otherwise.
	* examples/book/treeview/: Added filter example, which does not work 
	properly yet.

2.4.6:

2004-10-16  Gene Ruebsamen  <gene@erachampion.com>
 
 	* docs/tutorial/gtkmm-tut.xml: Added a chapter for the new gtk-2.4 
 	FileChooserDialog.
 	* docs/tutorial/figures/dialogs_filechooser.png: Added a PNG image
 	of the new FileChooserDialog.

2004-10-23  Roger Leigh <rleigh@debian.org>
 
 	* build_shared/Makefile_build.am_fragment: Use PLATFORM_WIN32
 	rather than OS_WIN32 so that -no-undefined is used on Cygwin
 	as well as MinGW toolchains.

2004-10-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm.h: #include filechooserwidget.h, as suggested in bug 
	#156170 from Arjan Timmerman.

2004-10-24  Murray Cumming  <murrayc@murrayc.com>
