@@ -2,8 +2,7 @@
 SUBDIRS		= tools pango atk gdk gtk @EXAMPLE_SUBDIR@ docs demos tests
 DIST_SUBDIRS	= $(SUBDIRS) scripts
 
-EXTRA_DIST	= gtkmm.spec.in \
-		  build_shared/Makefile_build.am_fragment \
+EXTRA_DIST	= build_shared/Makefile_build.am_fragment \
 		  build_shared/Makefile_build_gensrc.am_fragment \
 		  build_shared/Makefile_gensrc.am_fragment \
 		  build_shared/Makefile_conditional.am_fragment \
