@@ -242,7 +242,6 @@ AUTOHEADER=':'
 
 AC_CONFIG_FILES([
   Makefile
-  gtkmm.spec
 
   atk/Makefile
   atk/atkmm-1.6.pc
