@@ -1,95 +1,0 @@
-%define version		@VERSION@
-%define release		1
-
-Summary: A C++ interface for GTK2 (a GUI library for X).
-Name: gtkmm2
-Version: %{version}
-Release: %{release}
-Group: System Environment/Libraries
-License: LGPL
-URL: http://gtkmm.sourceforge.net/
-Source: ftp://ftp.sourceforge.net/pub/sourceforge/gtkmm/gtkmm-%{version}.tar.gz
-BuildRoot: %{_tmppath}/%{name}-%{version}-root
-BuildRequires: libsigc++-devel >= 1.2.0, glib2-devel >= 2.0.4
-BuildRequires: atk-devel >= 1.0.0, pango-devel >= 1.0.0, gtk2-devel >= 2.0.5
-
-%description
-gtkmm provides a C++ interface to the GTK+ GUI library. gtkmm2 wraps GTK+ 2.
-Highlights include typesafe callbacks, widgets extensible via inheritance
-and a comprehensive set of widget classes that can be freely combined to
-quickly create complex user interfaces.
-
-%package devel
-Summary: Headers for developing programs that will use %{name}.
-Group: Development/Libraries
-Requires: %{name} = %{version}, gtk2-devel, glib2-devel, libsigc++-devel
-Requires: atk-devel, pango-devel
-
-%description devel
-This package contains the static libraries and header files needed for
-developing gtkmm applications.
-
-
-%prep
-%setup -q -n gtkmm-%{version}
-
-%build
-%configure --enable-static --enable-shared
-make %{?_smp_mflags}
-
-%install
-rm -rf %{buildroot}
-make DESTDIR=%{buildroot} install
-
-# new redhat versions don't use .la
-rm -f %{buildroot}%{_libdir}/*.la
-
-%post -p /sbin/ldconfig
-
-%postun -p /sbin/ldconfig
-
-%clean
-rm -rf %{buildroot}
-
-%files
-%defattr(-, root, root)
-%doc AUTHORS ChangeLog COPYING NEWS README TODO
-%{_libdir}/*.so.*
-
-%files devel
-%defattr(-, root, root)
-%doc CHANGES PORTING
-%doc %{_datadir}/doc/gtkmm-2.0
-%{_includedir}/gtkmm-2.0
-%{_libdir}/*.a
-%{_libdir}/*.so
-%{_libdir}/gtkmm-2.0
-%{_libdir}/pkgconfig/*.pc
-%{_prefix}/share/devhelp/books/gtkmm-2.0/gtkmm-2.0.devhelp
-
-%changelog
-* Sun Dec 22 2003 Eric Bourque <ericb@computer.org> 2.2.8-1
-- added gtkmm2.devhelp to files section
-* Fri Dec 6 2002 Gary Peck <gbpeck@sbcglobal.net> 2.0.2-1
-- Removed "--without docs" option and simplified the spec file since the
-  documentation is included in the tarball now
-
-* Thu Dec 5 2002 Walter H. van Holst <rpm-maintainer@fossiel.xs4all.nl> 1.0.2
-- Removed reference to patch
-- Added the documentation files in %files
-
-* Thu Oct 31 2002 Gary Peck <gbpeck@sbcglobal.net> 2.0.0-gp1
-- Update to 2.0.0
-
-* Wed Oct 30 2002 Gary Peck <gbpeck@sbcglobal.net> 1.3.26-gp3
-- Added "--without docs" option to disable DocBook generation
-
-* Sat Oct 26 2002 Gary Peck <gbpeck@sbcglobal.net> 1.3.26-gp2
-- Update to 1.3.26
-- Spec file cleanups
-- Removed examples from devel package
-- Build html documentation (including a Makefile patch)
-
-* Mon Oct 14 2002 Gary Peck <gbpeck@sbcglobal.net> 1.3.24-gp1
-- Initial release of gtkmm2, using gtkmm spec file as base
-
