@@ -1,3 +1,10 @@
+2004-11-03  Murray Cumming  <murrayc@murrayc.com>
+
+	* Removed gtkmm.spec.in and mention of it in configure.in and 
+	Makefile.am, yet again. There is no point in having a broken spec 
+	file that nobody is maintaining. spec files are distro-specific and 
+	belong with distros.
+
 2004-10-31  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/treemodelfilter.ccg: SignalProxy_Modify::gtk_callback():
